# elf_loader_rs

./: Cargo.toml  README.md
lib_elf_main/: Cargo.toml
lib_elf_main/src/: main.rs
src/: elf_utils.rs  lib_elf.rs
