[package]
name = "elf_loader"
version = "0.1.0"
authors = ["0xricksanchez <admin@0x434b.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain = "0.2.3"

[lib]
name = "lib_elf"
path = "src/lib_elf.rs"
test = true
edition = "2021"
crate-type = ["lib"]


